--- a/views/vehicle/index.ejs
+++ b/views/vehicle/index.ejs
@@ -30,10 +30,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/vehicles">Products</a>
+              <a class="nav-link active" href="/vehicles">Products</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -46,8 +46,8 @@
                 Other
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Add Vehicles</a></li>
+                <li><a class="dropdown-item" href="#">Add Customers</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
@@ -119,6 +119,34 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+    <h3 class="text-center">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat fuga
+      deserunt eius itaque impedit aliquam quis nesciunt praesentium quisquam
+      velit rerum, adipisci magnam iure! Voluptate veniam dolorum quis id
+      eveniet?
+    </h3>
+    <div class="container-lg mt-5">
+      <div class="row">
+        <% vehicles.forEach(vehicle => { %>
+        <div class="col-4 mb-5">
+          <div class="card" style="width: 18rem">
+            <img
+              src="<%= vehicle.image %>"
+              class="card-img-top"
+              alt="..."
+              style="height: 170px"
+            />
+            <div class="card-body">
+              <h5 class="card-title"><%= vehicle.name %></h5>
+              <p class="card-text text-danger">Rp. <%= vehicle.price %></p>
+              <a href="#" class="btn btn-light btn-outline-success">Buy</a>
+              <a href="/vehicles/edit/<%= vehicle.id %>" class="btn btn-outline-danger">Edit</a>
+            </div>
+          </div>
+        </div>
+        <% }) %>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
