--- a/views/vehicle/editPage.ejs
+++ b/views/vehicle/editPage.ejs
@@ -30,14 +30,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/vehicles">Products</a>
+              <a class="nav-link" href="/vehicles">Products</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -46,7 +46,9 @@
                 Other
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/vehicles/create">Add Vehicles</a></li>
+                <li>
+                  <a class="dropdown-item" href="/create">Add Vehicles</a>
+                </li>
                 <li><a class="dropdown-item" href="#">Add Customers</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
@@ -120,12 +122,64 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <h3 class="text-center">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat fuga
-      deserunt eius itaque impedit aliquam quis nesciunt praesentium quisquam
-      velit rerum, adipisci magnam iure! Voluptate veniam dolorum quis id
-      eveniet?
-    </h3>
+    <div class="container mt-5">
+      <div class="card p-4">
+        <div class="row">
+          <div class="col">
+            <h5 class="text-center">Input Vehicles</h5>
+            <form method="post" action="/vehicles/edit/<%=result.id%>">
+              <div class="form-group mb-4">
+                <label for="formGroupExampleInput">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="formGroupExampleInput"
+                  name="name"
+                  value="<%=result.name%>"
+                  placeholder="Input Vehicles"
+                />
+              </div>
+              <div class="form-group mb-4">
+                <label for="formGroupExampleInput2">Brand</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="formGroupExampleInput2"
+                  name="brand"
+                  value="<%=result.brand%>"
+                  placeholder="Input the Brand"
+                />
+              </div>
+              <div class="form-group mb-4">
+                <label for="formGroupExampleInput2">Price</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="formGroupExampleInput3"
+                  name="price"
+                  value="<%=result.price%>"
+                  placeholder="Input the Price"
+                />
+              </div>
+              <div class="form-group mb-4">
+                <label for="formGroupExampleInput2">Image</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlFile1"
+                  name="image"
+                  value="<%=result.image%>"
+                />
+              </div>
+              <div class="mt-3">
+                <button class="btn btn-primary" type="submit">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
