--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -115,64 +115,33 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container mt-5">
-      <div class="card p-4">
+    <h3 class="text-center">Customers List</h3>
+    <div class="container-lg mt-5">
+      <div class="card p-5 bg-light rounded">
         <div class="row">
-          <div class="col">
-            <h5 class="text-center">Input Vehicles</h5>
-            <form method="post" action="/vehicles/edit/<%=result.id%>">
-              <div class="form-group mb-4">
-                <label for="formGroupExampleInput">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="formGroupExampleInput"
-                  name="name"
-                  value="<%=result.name%>"
-                  placeholder="Input Vehicles"
-                />
+          <% customers.forEach(customer => { %>
+          <div class="col-4 mb-5">
+            <div class="card bg-light" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title"><%= customer.name %></h5>
+                <p class="card-text"><%= customer.address %></p>
+                <a
+                  href="/customers/edit/<%= customer.id %>"
+                  class="btn btn-outline-info"
+                  >Edit</a
+                >
+                <a
+                  href="/customers/delete/<%=customer.id %>"
+                  class="btn btn-light btn-outline-danger"
+                  >Delete</a
+                >
               </div>
-              <div class="form-group mb-4">
-                <label for="formGroupExampleInput2">Brand</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="formGroupExampleInput2"
-                  name="brand"
-                  value="<%=result.brand%>"
-                  placeholder="Input the Brand"
-                />
-              </div>
-              <div class="form-group mb-4">
-                <label for="formGroupExampleInput2">Price</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="formGroupExampleInput3"
-                  name="price"
-                  value="<%=result.price%>"
-                  placeholder="Input the Price"
-                />
-              </div>
-              <div class="form-group mb-4">
-                <label for="formGroupExampleInput2">Image</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="exampleFormControlFile1"
-                  name="image"
-                  value="<%=result.image%>"
-                />
-              </div>
-              <div class="mt-3">
-                <button class="btn btn-primary" type="submit">Submit</button>
-              </div>
-            </form>
+            </div>
           </div>
+          <% }) %>
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
