--- a/views/vehicle/addPage.ejs
+++ b/views/vehicle/addPage.ejs
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Showroom Jackie's</a>
         <button
@@ -30,14 +30,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/vehicles">Products</a>
+              <a class="nav-link" href="/vehicles">Vehicles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/customers">Customers</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link active dropdown-toggle"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -47,28 +50,18 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/create">Add Vehicles</a>
+                  <a class="dropdown-item" href="/vehicles/create"
+                    >Add Vehicles</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Add Customers</a></li>
-                <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="/customers/create"
+                    >Add Customers</a
+                  >
                 </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -168,9 +161,7 @@
                 />
               </div>
               <div class="mt-3">
-                <button class="btn btn-primary" type="submit">
-                  Submit
-                </button>
+                <button class="btn btn-primary" type="submit">Submit</button>
               </div>
             </form>
           </div>
