--- a/views/vehicle/index.ejs
+++ b/views/vehicle/index.ejs
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Showroom Jackie's</a>
         <button
@@ -30,10 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/vehicles">Products</a>
+              <a class="nav-link" href="/vehicles">Vehicles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/customers">Customers</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -51,26 +54,14 @@
                     >Add Vehicles</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">Add Customers</a></li>
-                <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="/customers/create"
+                    >Add Customers</a
+                  >
                 </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
